Fix typos in phoneme descriptions

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -10,26 +10,26 @@
     </string-array>
 
     <string name="i_description">/i/在英式发音中通常写作/iː/，两个点代表发长音。但是在美式发音中加点与不加点没多大区别。所以美式音标不加两个点。/i/在浊辅音前发长音/i/，/i/在清辅音前发短音/i/。</string>
-    <string name="i_short_description">/i/与/ɪ/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。嘴要冽开一点，舌头的放置要比发/i/音靠后一点。</string>
+    <string name="i_short_description">/i/与/ɪ/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。嘴要咧开一点，舌头的放置要比发/i/音靠后一点。</string>
     <string name="e_short_description">很多字典和中国的很多课本描述英式英语使用/e/来发这个音，根据IPA它应该被写成/ɛ/，嘴型比/æ/小，嘴张开到一根手指距离，舌头有一点向前。</string>
     <string name="ae_description">" /æ/像/ɛ/那样张开嘴，但张开的程度要像/ɑ/，舌头应该比/ɛ/更往后一些。</string>
     <string name="a_description">/ɑ/在英式英语中它写成/ɑː/，注意在美式英语中它的发音与/ʌ/有很大区别。还有/ɑ/与汉语拼音中\"a\"也不同。在IPA中写作/a/。</string>
     <string name="c_backwards_description">/ɔ/根据IPA这个音标应该被写成/ɒ/，但为了和大多数字典保持一致/ɒ/被写成/ɔ/。当/ɔ/在描述英式音标的时候是不一样的。大约40%的美国人不发这个音/ɔ/，他们用/ɑ/代替，上述的例子可以这样发音/ɑt/,/kɑt/,和/sɑ/。cot和caught两个单词发音一样/kɑt/。</string>
     <string name="u_short_description">/ʊ/有时它被错写成/u/，但它应该写成/ʊ/，/ʊ/和/u/是两个不同的元音。</string>
     <string name="u_description">/u/也写成/uː/，但是像/iː/、/aː/、/ɔː/这些元音的点在美式英语中不必加点。</string>
-    <string name="v_upsidedown_description">/ʌ/与/a/读音不同。区别之处不是长音与短音的区别，而是嘴型的大小和舌头的位置。注意他发音时不同于英式读音，英式读音也常写成/ʌ/。当/ʌ/不读成重音时，通常写作成/ə/。</string>
-    <string name="schwa_description">/ə/是美式发音中最常见的一个音，由于他常用于非重读音节的单词。因此被称作非重读音节的元音。当此元音重读时常写成/ʌ/。</string>
-    <string name="ei_description">/eɪ/是双元音。他由/e/音与/ɪ/音结合而成。在美式发音的字典中有时也写成/e/。（不要困惑英式/e/，事实上他发/ɛ/音）某一单词（含有/eɪ/），在美式发音为/eɪ/而英式发音是/ɛɪ/。但是他们依旧都写成/eɪ/</string>
-    <string name="ai_description">/aɪ/是双元音。他由/a/与/ɪ/结合而成。注意：/aɪ/与/æ/发音不同。</string>
-    <string name="au_description">/aʊ/是双元音。他由/a/与/ʊ/结合而成。注意：/aʊ/与/ɔ/发音的不同之处。还要注意/aʊ/与汉语拼音中\"ao\"发音也不同。</string>
-    <string name="ou_description">/oʊ/是双元音。他由/o/与/ʊ/结合而成。注意与英式的/əʊ/区别，两者不同之处非常小。</string>
+    <string name="v_upsidedown_description">/ʌ/与/a/读音不同。区别之处不是长音与短音的区别，而是嘴型的大小和舌头的位置。注意它发音时不同于英式读音，英式读音也常写成/ʌ/。当/ʌ/不读成重音时，通常写作成/ə/。</string>
+    <string name="schwa_description">/ə/是美式发音中最常见的一个音。它常用于非重读音节的单词，因此被称作非重读音节的元音。当此元音重读时常写成/ʌ/。</string>
+    <string name="ei_description">/eɪ/是双元音。它由/e/音与/ɪ/音结合而成。在美式发音的字典中有时也写成/e/。（不要困惑英式/e/，事实上它发/ɛ/音）某一单词（含有/eɪ/），在美式发音为/eɪ/而英式发音是/ɛɪ/。但是它们依旧都写成/eɪ/</string>
+    <string name="ai_description">/aɪ/是双元音。它由/a/与/ɪ/结合而成。注意：/aɪ/与/æ/发音不同。</string>
+    <string name="au_description">/aʊ/是双元音。它由/a/与/ʊ/结合而成。注意：/aʊ/与/ɔ/发音的不同之处。还要注意/aʊ/与汉语拼音中\"ao\"发音也不同。</string>
+    <string name="ou_description">/oʊ/是双元音。它由/o/与/ʊ/结合而成。注意与英式的/əʊ/区别，两者不同之处非常小。</string>
     <string name="er_stressed_description">/ɝ/音有时候写为/ər/或/əɹ/。这个音是重读音节或单音节词。当/ɝ/不重读时，写成/ɚ/。在英式英语中，/ɝ/的发音为/ɜː/。</string>
     <string name="oi_description">/ɔɪ/中的ɔ与此app中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/）读/ɔɪ/时，嘴型是小口嘴型。</string>
     <string name="er_unstressed_description">/ɚ/的发音与/ɝ/相同，除了它是不重读音节时。它有时写为/ər/或/əɹ/。在英式英语中，/ɚ/的发音与/ə/一样。</string>
     <string name="ar_description">根据IPA/aɹ/更加正确地写法是/aɹ/或者/aɚ/，在英式英语中这个发音像/a:/。</string>
     <string name="er_description">根据IPA更加正确的写法是/ɛɹ/或者/ɛɚ/，在英式英语中这个音标的发音和写法是/eə/。</string>
-    <string name="or_description">在这个app中，当ɔ用作ɔr时的发音与ɔ不同。(这是因为/ɔ/用来描述很多美式英语应该被写成/ɒ/)，音标/ɔr/以一个小圆唇开始。根据IPA更加正确呢写法是/ɔɹ/。</string>
-    <string name="ir_description">根据IAP更加正确的写法是/ɪɹ/或者/ɪɚ/，在英式英语中它的发音像/ɪə/。</string>
+    <string name="or_description">在这个app中，当ɔ用作ɔr时的发音与ɔ不同。(这是因为很多情况下，/ɔ/被用来描述美式英语中应该写作/ɒ/的发音)，音标/ɔr/以一个小圆唇开始。根据IPA更加正确呢写法是/ɔɹ/。</string>
+    <string name="ir_description">根据IPA更加正确的写法是/ɪɹ/或者/ɪɚ/，在英式英语中它的发音像/ɪə/。</string>
     <string name="flap_t_description">这个音标(不是/r/)叫做齿龈闪音，在中国英语课本中通常不教，但在美式音标中扮演重要的角色。尤其当/t/在一个非重读的元音之间。音标/ɾ/也可以写成/d/,虽然不标准。如果那样的话，上述例子应该被写成/ˈwɑdɚ/，/ˈlɪdəl/和/\'θɝdi/。</string>
     <string name="glottal_stop_description">被称作是声门塞音。在中国的英语课本中通常不讲，但在美式音标中它是重要的一部分。注意这里的put发音与例子中的/ʊ/的发音是不同的，/pʊt/  /pʊʔ/。这个/ ʔ/经常代替/t/，特别是在单词词尾和句子中间。</string>
     <string name="r_description">根据IPA,/r/应该写为/ɹ/.(IPA中的/r/实际上是颤音，就像蒙语中的\"r\").然而，为了与中国的课本和词典保持一致，在这里使用/r/。要注意/r/和/ʒ/的不同之处，也要注意英语中的/r/与汉语拼音中的\"r\"的不同之处。</string>
@@ -41,21 +41,21 @@
     <string name="l_description">当/l/在单词开头时，它就是IPA本身。当它在单词词尾时发音有所不同。当它是IPA时写为/ɫ/，但在这个app中，/l/和/ɫ/同时被使用。（在许多课本和词典中也是如此）第二个例子也能写成/kuəl/,不要把最后俩个例子读成/kuo/或/bɪo/.你的嘴唇应该放松且不能移动。</string>
     <string name="th_voiced_description">发/ð/时舌头要轻轻触碰上牙齿的底部。/ð/和/θ/嘴型位置相同。最主要的区别就是/ð/是浊音。</string>
     <string name="v_description">注意/v/与/w/两者发音的不同。发/v/音上牙齿要触碰下嘴唇。/v/音和/f/音的嘴型相同。唯一的不同之处就是/v/是浊音。还要注意第三个例子不要读成/hævə/。</string>
-    <string name="k_description">位于单词词首是送气音/kʰ/，但是在s字母和单词词尾时不是送气音/k/，注意不要读成第三个例子/wikə/。</string>
-    <string name="ch_description">特别注意它在单词词尾的发音，注意不要读成第三个例子/ʧɝʧə/。</string>
-    <string name="f_description">特别注意它在单词词尾的发音，注意不要读成第三个例子/ɪfə/。</string>
+    <string name="k_description">位于单词词首是送气音/kʰ/，但是在s字母和单词词尾时不是送气音/k/，注意不要把第三个例子读成/wikə/。</string>
+    <string name="ch_description">特别注意它在单词词尾的发音，注意不要把第三个例子读成/ʧɝʧə/。</string>
+    <string name="f_description">特别注意它在单词词尾的发音，注意不要把第三个例子读成/ɪfə/。</string>
     <string name="th_voiceless_description">这个音标的发音，舌头轻微触到上齿底部，不要读成/s/。</string>
-    <string name="s_description">特别注意单词词尾的发音，注意不要读成第三个例子/pæsə/。</string>
+    <string name="s_description">特别注意单词词尾的发音，注意不要把第三个例子读成/pæsə/。</string>
     <string name="sh_description">特别注意在单词词尾的发音，注意不要读成/æʃə/。</string>
     <string name="ng_description">在英语中，/ŋ/音不会出现在单词开头。</string>
     <string name="n_description">特别注意/n/在单词词尾的发音。注意不要把第三个例子读成/sʌnə/。</string>
     <string name="m_description">特别注意/m/在单词词尾的发音。注意不要把第三个例子读成/ɑrmə/。</string>
     <string name="dzh_description">特别注意/ʤ/在单词词尾的发音，注意第三个例子不要读成/ɛʤə/。</string>
     <string name="g_description">特别注意/g/在单词词尾的发音，注意第三个例子不要读成/pɪgə/或者是/pɪk/。</string>
-    <string name="t_description">位于单词词首是送气音，但是在s字母后和单词词尾时不是送气音。注意不要读成第三个例子/ɪtə/，/ɪts/和/ɪtʰ/，还要注意 t 在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
+    <string name="t_description">位于单词词首是送气音，但是在s字母后和单词词尾时不是送气音。注意不要把第三个例子读成/ɪtə/，/ɪts/和/ɪtʰ/，还要注意 t 在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
     <string name="d_description">特别注意/d/在单词词尾的发音，注意第三个例子不要读成/kɑrdə/或者是/kɑrt/。</string>
     <string name="b_description">特别注意/b/在单词词尾的发音，注意第三个例子不要读成/rɪbə/或者是/rɪp/。</string>
-    <string name="p_description">位于单词词首时是送气音，但在字母s后和单词词胃时不是送气音。注意不要读成第三个例子/stapə/。</string>
+    <string name="p_description">位于单词词首时是送气音，但在字母s后和单词词尾时不是送气音。注意不要把第三个例子读成/stapə/。</string>
     <string name="app_name">美式发音</string>
     <string name="main_menu_keyboard">输入音标</string>
     <string name="main_menu_about">关于应用</string>
