fixes to Chinese IPA descriptions

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -9,53 +9,53 @@
         <item>100</item>
     </string-array>
 
-    <string name="i_description">/i/在英式发音中通常写作/iː/，两个点代表发长音。但是在美式发音中加点与不加点没多大区别。所以美式音标不加两个点。/i/在浊辅音前发长音/i/，/i/在清辅音前发短音/i/。</string>
-    <string name="i_short_description">/i/与/ɪ/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。嘴要咧开一点，舌头的放置要比发/i/音靠后一点。</string>
-    <string name="e_short_description">很多字典和中国的很多课本描述英式英语使用/e/来发这个音，根据IPA它应该被写成/ɛ/，嘴型比/æ/小，嘴张开到一根手指距离，舌头有一点向前。</string>
-    <string name="ae_description">" /æ/像/ɛ/那样张开嘴，但张开的程度要像/ɑ/，舌头应该比/ɛ/更往后一些。</string>
-    <string name="a_description">/ɑ/在英式英语中它写成/ɑː/，注意在美式英语中它的发音与/ʌ/有很大区别。还有/ɑ/与汉语拼音中\"a\"也不同。在IPA中写作/a/。</string>
-    <string name="c_backwards_description">/ɔ/根据IPA这个音标应该被写成/ɒ/，但为了和大多数字典保持一致/ɒ/被写成/ɔ/。当/ɔ/在描述英式音标的时候是不一样的。大约40%的美国人不发这个音/ɔ/，他们用/ɑ/代替，上述的例子可以这样发音/ɑt/,/kɑt/,和/sɑ/。cot和caught两个单词发音一样/kɑt/。</string>
-    <string name="u_short_description">/ʊ/有时它被错写成/u/，但它应该写成/ʊ/，/ʊ/和/u/是两个不同的元音。</string>
-    <string name="u_description">/u/也写成/uː/，但是像/iː/、/aː/、/ɔː/这些元音的点在美式英语中不必加点。</string>
-    <string name="v_upsidedown_description">/ʌ/与/a/读音不同。区别之处不是长音与短音的区别，而是嘴型的大小和舌头的位置。注意它发音时不同于英式读音，英式读音也常写成/ʌ/。当/ʌ/不读成重音时，通常写作成/ə/。</string>
-    <string name="schwa_description">/ə/是美式发音中最常见的一个音。它常用于非重读音节的单词，因此被称作非重读音节的元音。当此元音重读时常写成/ʌ/。</string>
-    <string name="ei_description">/eɪ/是双元音。它由/e/音与/ɪ/音结合而成。在美式发音的字典中有时也写成/e/。（不要困惑英式/e/，事实上它发/ɛ/音）某一单词（含有/eɪ/），在美式发音为/eɪ/而英式发音是/ɛɪ/。但是它们依旧都写成/eɪ/</string>
-    <string name="ai_description">/aɪ/是双元音。它由/a/与/ɪ/结合而成。注意：/aɪ/与/æ/发音不同。</string>
-    <string name="au_description">/aʊ/是双元音。它由/a/与/ʊ/结合而成。注意：/aʊ/与/ɔ/发音的不同之处。还要注意/aʊ/与汉语拼音中\"ao\"发音也不同。</string>
-    <string name="ou_description">/oʊ/是双元音。它由/o/与/ʊ/结合而成。注意与英式的/əʊ/区别，两者不同之处非常小。</string>
-    <string name="er_stressed_description">/ɝ/音有时候写为/ər/或/əɹ/。这个音是重读音节或单音节词。当/ɝ/不重读时，写成/ɚ/。在英式英语中，/ɝ/的发音为/ɜː/。</string>
-    <string name="oi_description">/ɔɪ/中的ɔ与此app中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/）读/ɔɪ/时，嘴型是小口嘴型。</string>
-    <string name="er_unstressed_description">/ɚ/的发音与/ɝ/相同，除了它是不重读音节时。它有时写为/ər/或/əɹ/。在英式英语中，/ɚ/的发音与/ə/一样。</string>
-    <string name="ar_description">根据IPA/aɹ/更加正确地写法是/aɹ/或者/aɚ/，在英式英语中这个发音像/a:/。</string>
-    <string name="er_description">根据IPA更加正确的写法是/ɛɹ/或者/ɛɚ/，在英式英语中这个音标的发音和写法是/eə/。</string>
-    <string name="or_description">在这个app中，当ɔ用作ɔr时的发音与ɔ不同。(这是因为很多情况下，/ɔ/被用来描述美式英语中应该写作/ɒ/的发音)，音标/ɔr/以一个小圆唇开始。根据IPA更加正确呢写法是/ɔɹ/。</string>
-    <string name="ir_description">根据IPA更加正确的写法是/ɪɹ/或者/ɪɚ/，在英式英语中它的发音像/ɪə/。</string>
-    <string name="flap_t_description">这个音标(不是/r/)叫做齿龈闪音，在中国英语课本中通常不教，但在美式音标中扮演重要的角色。尤其当/t/在一个非重读的元音之间。音标/ɾ/也可以写成/d/,虽然不标准。如果那样的话，上述例子应该被写成/ˈwɑdɚ/，/ˈlɪdəl/和/\'θɝdi/。</string>
-    <string name="glottal_stop_description">被称作是声门塞音。在中国的英语课本中通常不讲，但在美式音标中它是重要的一部分。注意这里的put发音与例子中的/ʊ/的发音是不同的，/pʊt/  /pʊʔ/。这个/ ʔ/经常代替/t/，特别是在单词词尾和句子中间。</string>
-    <string name="r_description">根据IPA,/r/应该写为/ɹ/.(IPA中的/r/实际上是颤音，就像蒙语中的\"r\").然而，为了与中国的课本和词典保持一致，在这里使用/r/。要注意/r/和/ʒ/的不同之处，也要注意英语中的/r/与汉语拼音中的\"r\"的不同之处。</string>
-    <string name="h_description">在英语中，/h/音不会出现在单词词尾。注意英语中的/h/与汉语拼音中的\"h\"不同。</string>
-    <string name="j_description">在英语中，/j/音不会出现在单词词尾。注意year和ear的不同之处。</string>
-    <string name="w_description">注意/w/和/v/的不同之处。读/w/音时，嘴唇要形成一个小圆且不要触碰牙齿。一小部分美国人将\"wh\"音发成/hw/(在IPA中是/ʍ/)。</string>
-    <string name="zh_description">/ʒ/和/ʃ/嘴型相同。唯一的不同之处就是/ʒ/是浊音。注意区别/r/和/ʒ/。</string>
-    <string name="z_description">/z/和/s/嘴型相同。唯一的不同之处就是/z/是浊音。不要说成/dz/。英语中的/z/和汉语拼音中的“z”不同。</string>
-    <string name="l_description">当/l/在单词开头时，它就是IPA本身。当它在单词词尾时发音有所不同。当它是IPA时写为/ɫ/，但在这个app中，/l/和/ɫ/同时被使用。（在许多课本和词典中也是如此）第二个例子也能写成/kuəl/,不要把最后俩个例子读成/kuo/或/bɪo/.你的嘴唇应该放松且不能移动。</string>
-    <string name="th_voiced_description">发/ð/时舌头要轻轻触碰上牙齿的底部。/ð/和/θ/嘴型位置相同。最主要的区别就是/ð/是浊音。</string>
-    <string name="v_description">注意/v/与/w/两者发音的不同。发/v/音上牙齿要触碰下嘴唇。/v/音和/f/音的嘴型相同。唯一的不同之处就是/v/是浊音。还要注意第三个例子不要读成/hævə/。</string>
-    <string name="k_description">位于单词词首是送气音/kʰ/，但是在s字母和单词词尾时不是送气音/k/，注意不要把第三个例子读成/wikə/。</string>
-    <string name="ch_description">特别注意它在单词词尾的发音，注意不要把第三个例子读成/ʧɝʧə/。</string>
-    <string name="f_description">特别注意它在单词词尾的发音，注意不要把第三个例子读成/ɪfə/。</string>
+    <string name="i_description">在英式英语中/i/音标通常写作/i:/，两个点代表发长音。但是在美式发音中加点与不加点没多大区别。所以美式音标不加两个点。它在浊辅音前发长音，清辅音前发短音。</string>
+    <string name="a_description">在英式英语中/ɑ/音标通常写作/ɑː/。注意在美式英语中它的发音与/ʌ/有很大区别。还有/ɑ/与汉语拼音中\"a\"也不同。（在国际音标中，汉语拼音的\"a\"写作/a/）。</string>
+    <string name="u_description">在英式英语中/u/音标通常写作/uː/，但是像/iː/、/aː/、/ɔː/这些元音的点在美式英语中长元音不必加点。美式英语中所有重读的元音在浊辅音前发长音，清辅音前发短音。</string>
+    <string name="i_short_description">/ɪ/与/i/发音不同。在长音与短音方面区别不是很大，最主要的区别是你嘴型的大小和舌头的位置。跟/i/音比起，嘴要稍微再咧开一点，舌头的放置要靠后一点。</string>
+    <string name="u_short_description">/ʊ/与/u/发音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。</string>
+    <string name="v_upsidedown_description">/ʌ/与/ɑ/读音不同。在长音与短音方面区别不是很大，而是嘴型的大小和舌头的位置。注意它的发音与英式英语/ʌ/音标的发音稍微有所不同。当/ʌ/不读成重音时，通常写作成/ə/。</string>
+    <string name="e_short_description">英式英语的音标中使用/e/音标来表示这个发音。实际上，根据标准国际音标它应该被写成/ɛ/。嘴张开的程度比/æ/小，舌尖更靠前一点。</string>
+    <string name="ae_description">"发/æ/音时，嘴张开的程度要像/ɑ/一样大，嘴角像/ɛ/那样拉向两边，但舌头应该比/ɛ/更往后一些。</string>
+    <string name="c_backwards_description">根据国际音标，美式英语中使用的/ɔ/这个音标应该被写成/ɒ/，但为了和大多数词典保持一致，我们使用了/ɔ/。（注意，/ɔː/用于英式音标时发音是不一样的，英式音标的/ɔː/是标准国际音标。）大约40%的美国人不发这个音，他们用/ɑ/代替，上述的例子可以这样发音：/ɑt/，/kɑt/，和/sɑ/。</string>
+    <string name="schwa_description">元音/ə/是美式发音中最常见的一个音。它常用于非重读音节的单词。当此元音重读时通常写成/ʌ/。</string>
+    <string name="ei_description">/eɪ/是双元音。它由/e/和/ɪ/两个单音组成。在有些美式发音的词典中有时也写成/e/。不要与英式音标/e/混淆，事实上它发/ɛ/音，美式英语中带/eɪ/音的词，英式英语中的发音应该为/ɛi/。但是它们依旧都写成/eɪ/。</string>
+    <string name="ai_description">/aɪ/是双元音。它由/a/和/ɪ/两个单音组成。注意：/aɪ/与/æ/发音不同。</string>
+    <string name="au_description">/aʊ/是双元音。它由/a/和/ʊ/两个单音组成。注意：/aʊ/与/ɔ/发音不同。还要注意/aʊ/与汉语拼音中\"ao\"发音也不同。</string>
+    <string name="oi_description">/ɔɪ/是双元音。它由/ɔ/和/ɪ/两个单音组成。/ɔɪ/中的ɔ与此应用中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/。）读/ɔɪ/时，口型由小而圆开始。</string>
+    <string name="ou_description">/oʊ/是双元音。它由/o/和/ʊ/两个单音组成。在有些美式发音的词典中有时也写成/o/。注意它与英式发音/əʊ/有轻微的不同。</string>
+    <string name="er_stressed_description">/ɝ/音有时候写为/ər/或/əɹ/。这是在重读音节或单音节词中的发音。当/ɝ/非重读时，写成/ɚ/。英式英语中没有/ɝ/音，美国人发/ɝ/的单词中英国人发/ɜː/音。</string>
+    <string name="er_unstressed_description">/ɚ/的发音与/ɝ/相同，/ɚ/用于轻读的音节，而/ɝ/用于重读的音节。它有时写为/ər/或/əɹ/。英式英语中没有/ɚ/音，美国人发/ɚ/的单词中英国人发/ə/音。</string>
+    <string name="ar_description">根据国际音标更加正确地写法是/ɑɹ/或者/ɑɚ/。英式英语中没有/ɑr/音，美国人发/ɑr/的单词中英国人发/ɑː/音。</string>
+    <string name="er_description">根据国际音标更加正确的写法是/ɛɹ/或者/ɛɚ/。英式英语中没有/ɛr/音，美国人发/ɛr/的单词中英国人发/eə/音。</string>
+    <string name="ir_description">根据国际音标更加正确的写法是/ɪɹ/或者/ɪɚ/。英式英语中没有/ɪr/音，美国人发/ɑr/的单词中英国人发/ɪr/音。</string>
+    <string name="or_description">根据国际音标更加正确呢写法是/ɔɹ/或者/ɔɚ/。/ɔr/中的ɔ与此应用中的/ɔ/发音不同。（这是因为在美式英语中，/ɔ/应该写为/ɒ/。）读/ɔr/时，口型由小而圆开始。英式英语中没有/ɔr/音，美国人发/ɔr/的单词中英国人发/ɔ:/音。</string>
+    <string name="p_description">位于词首时是送气音[pʰ]，但在字母s后和词尾时是不送气的[p]（跟汉语拼音的\"b\"音一样）。注意不要把第三个例子读成/stapə/。</string>
+    <string name="t_description">位于词首时是送气音[tʰ]，但在字母s后和词尾时是不送气的[t]（跟汉语拼音的\"d\"音一样）。注意不要把第三个例子读成/ɪtə/，/ɪts/或/ɪtʰ/，还要注意\"t\"在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
+    <string name="k_description">位于词首时是送气音[kʰ]，但在字母s后和词尾时是不送气的[k]（跟汉语拼音的\"g\"音一样）。注意不要把第三个例子读成/wikə/。</string>
+    <string name="b_description">注意/b/在单词词尾的发音，不要把第三个例子读成/rɪbə/或者是/rɪp/。英语中的/b/和汉语拼音中的\"b\"不同。</string>
+    <string name="d_description">注意/d/在单词词尾的发音，不要把第三个例子读成/kɑrdə/或者是/kɑrt/。英语中的/d/和汉语拼音中的\"d\"不同。</string>
+    <string name="g_description">注意/g/在单词词尾的发音，不要把第三个例子读成/pɪgə/或者是/pɪk/。英语中的/g/和汉语拼音中的\"g\"不同。</string>
+    <string name="f_description">注意/f/在单词词尾的发音，不要把第三个例子读成/ɪfə/。</string>
+    <string name="s_description">注意/s/在单词词尾的发音，不要把第三个例子读成/pæsə/。</string>
+    <string name="ch_description">注意/ʧ/在单词词尾的发音，不要把第三个例子读成/ʧɝʧə/。英语中的/ʧ/和汉语拼音中的\"ch\"、\"q\"不同。（在国际音标中，汉语拼音的\"ch\"是[ʈʂʰ]音，\"q\"是[tɕʰ]音。）</string>
+    <string name="sh_description">注意/ʃ/在单词词尾的发音，不要把第三个例子读成/æʃə/。英语中的/ʃ/和汉语拼音中的\"sh\"、\"x\"不同。（在国际音标中，汉语拼音的\"sh\"是[ʂ]音，\"x\"是[ɕ]音。）</string>
+    <string name="dzh_description">注意/ʤ/在单词词尾的发音，不要把第三个例子读成/ɛʤə/。英语中的/ʤ/和汉语拼音中的\"zh\"、\"j\"不同。（在国际音标中，汉语拼音的\"zh\"是[ʈʂ]音，\"j\"是[tɕ]音。）</string>
+    <string name="v_description">/v/和/f/口型相同。唯一的不同之处就是/v/是浊音。注意/v/与/w/两者发音的不同。发/v/音时，上齿要轻轻接触下唇。还要注意第三个例子不要读成/hævə/。</string>
+    <string name="z_description">/z/和/s/口型相同。唯一的不同之处就是/z/是浊音。不要读成/dz/。英语中的/z/和汉语拼音中的\"z\"不同。（在国际音标中，汉语拼音的\"z\"是[ts]音，\"c\"是[tsʰ]音。）</string>
+    <string name="zh_description">/ʒ/和/ʃ/口型相同。唯一的不同之处就是/ʒ/是浊音。注意区别/r/和/ʒ/。</string>
+    <string name="th_voiced_description">/ð/和/θ/口型相同，最主要的区别就是/ð/是浊音。发/ð/时舌头轻触上齿的底部。</string>
     <string name="th_voiceless_description">这个音标的发音，舌头轻微触到上齿底部，不要读成/s/。</string>
-    <string name="s_description">特别注意单词词尾的发音，注意不要把第三个例子读成/pæsə/。</string>
-    <string name="sh_description">特别注意在单词词尾的发音，注意不要读成/æʃə/。</string>
-    <string name="ng_description">在英语中，/ŋ/音不会出现在单词开头。</string>
-    <string name="n_description">特别注意/n/在单词词尾的发音。注意不要把第三个例子读成/sʌnə/。</string>
-    <string name="m_description">特别注意/m/在单词词尾的发音。注意不要把第三个例子读成/ɑrmə/。</string>
-    <string name="dzh_description">特别注意/ʤ/在单词词尾的发音，注意第三个例子不要读成/ɛʤə/。</string>
-    <string name="g_description">特别注意/g/在单词词尾的发音，注意第三个例子不要读成/pɪgə/或者是/pɪk/。</string>
-    <string name="t_description">位于单词词首是送气音，但是在s字母后和单词词尾时不是送气音。注意不要把第三个例子读成/ɪtə/，/ɪts/和/ɪtʰ/，还要注意 t 在美式英语发音中经常改变发音，像/ɾ/和/ʔ/。</string>
-    <string name="d_description">特别注意/d/在单词词尾的发音，注意第三个例子不要读成/kɑrdə/或者是/kɑrt/。</string>
-    <string name="b_description">特别注意/b/在单词词尾的发音，注意第三个例子不要读成/rɪbə/或者是/rɪp/。</string>
-    <string name="p_description">位于单词词首时是送气音，但在字母s后和单词词尾时不是送气音。注意不要把第三个例子读成/stapə/。</string>
+    <string name="m_description">注意/m/在单词词尾的发音，不要把第三个例子读成/ɑrmə/。</string>
+    <string name="n_description">注意/n/在单词词尾的发音，不要把第三个例子读成/sʌnə/。</string>
+    <string name="ng_description">这个音不会出现在英语单词的词首。</string>
+    <string name="w_description">这个音不会出现在英语单词的词尾。注意/w/和/v/的不同之处。读/w/音时，嘴唇要形成一个小圆且不要触碰牙齿。一小部分美国人将\"wh\"音发成/hw/(在国际音标中是/ʍ/)。</string>
+    <string name="j_description">这个音不会出现在英语单词的词尾。注意year和ear的不同之处。</string>
+    <string name="h_description">这个音不会出现在英语单词的词尾。注意英语中的/h/与汉语拼音中的\"h\"不同。（在国际音标中，汉语拼音的\"h\"是[x]音。）</string>
+    <string name="l_description">当/l/在单词开头时，它就读国际音标中本身的音标。当字母l在单词词尾时发音有所不同，它就发国际音标的[ɫ]音。但是在这个应用的练习和考试中，我们用/l/音标代替[ɫ]音（在许多课本和词典中也是如此）。第二个例子也能写成/kuəl/，不要把最后俩个例子读成/kuo/或/bɪo/。你的嘴唇应该放松且不能移动。</string>
+    <string name="r_description">根据国际音标，这个音应该写为/ɹ/。(国际音标中的/r/实际上是颤音，就像蒙语中的\"r\")。然而，为了与许多课本和词典保持一致，在这里使用/r/音标。要注意/r/和/ʒ/的不同之处，也要注意英语中的/r/与汉语拼音中的\"r\"的不同之处。（在国际音标中，汉语拼音的\"r\"是/ɻ/音。）</string>
+    <string name="glottal_stop_description">这个音被称作为声门塞音。在中国的英语课本中通常不讲，但是它在美式发音中非常重要。注意例一put的不同发音，/pʊt/与/pʊʔ/。/ʔ/音经常代替/t/音，特别是在单词词尾和句子中间。</string>
+    <string name="flap_t_description">这个音标叫做齿龈闪音，在中国英语课本中通常不教，但是它在美式发音中非常重要。当/t/音出现在非重读的音节中并在两个元音之间，/ɾ/音通常会代替/t/音。尽管不准确，但是/ɾ/音标也可以写成/d/。这种情况下，上述例子应该被写成/ˈwɑdɚ/，/ˈlɪdəl/和/\'θɝdi/。</string>
     <string name="app_name">美式发音</string>
     <string name="main_menu_keyboard">输入音标</string>
     <string name="main_menu_about">关于应用</string>
